# url-shortener

./: .gitignore  Cargo.toml  rustfmt.toml  test_db.sqlite-shm  test_db.sqlite-wal
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: api.rs
migrations/: 20240408212225_create_url_info.sql
server/: Cargo.toml
server/src/: main.rs  store.rs
server/src/api/: mod.rs  url_shortner_controller.rs
server/src/services/: mod.rs  url_shortner_service.rs
src/: api.rs  db.rs  error.rs  lib.rs  main.rs  repositories.rs  types.rs  use_cases.rs  utils.rs
tests/: repositories_test.rs
tests/common/: mod.rs
