[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
dotenv = "0.15.0"
rand = "0.8.5"
serde = {version = "1.0.197", features = ["derive"]}
sqlx = {version = "0.7.4", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ]}
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.81"
mockall = "0.12.1"
