
[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "url_shortener"
path = "src/main.rs"

[lib]
name = "url_shortener"
path = "src/lib.rs"


[dependencies]
async-trait = "0.1.79"
axum = "0.7.5"
clap = "4.5.4"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.116"
sqlx = {version = "0.7.4", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ]}
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.81"
mockall = "0.12.1"
reqwest = { version = "0.12.3", features = ["json"]}
